# disordered-dynamical-systems

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  test.py  tests.ipynb
app/: app.py
app/assets/: style.css
app/components/: integration.py  title.py
app/components/plots/: interaction_matrix_heatmap.py  trajectories.py
app/components/variables/: dynamical_system.py  initial_condition.py  interaction_matrix.py  interaction_mean.py  interaction_noise.py  interaction_standard_deviation.py  number_of_agents.py  time.py  time_final.py  y.py
app/constants/: ids.py  initial_values.py
app/text/: title.py  tooltips.py
app/utility/: integrate.py
base/: __init__.py  circular_buffer.py  integrate.py  interactive.py
generalised_lotka_volterra/: __init__.py  simulation.py  theory.py  w_functions.py
interaction_matrix/: __init__.py  finely_structured_random_matrix.py
interactive/: interactive_standard_glv.py  main.py  streamlit.py
interactive/assets/: style.css
interactive/custom_components/: __init__.py  button.py  sliders.py
interactive/src/: dynamical_systems.py
interactive/src/components/: abundance_histogram.py  automatic_re_integration.py  constants.py  dynamical_system_dropdown.py  ids.py  initial_values.py  integration.py  interaction_matrix_heatmap.py  perturb_system_button.py  play_pause_button.py  reset_simulation_button.py  style.py  title.py  trajectories_plot.py  y_scale_dropdown.py
interactive/utility/: CircularBuffer.py  RK.py  __init__.py  fixing_the integrator.py  integrate.py
(+20 files in other folders)
